...
  return (
    <TransactionFlow
      approveTxRequest={approveTxRequest}
      derivedInfo={derivedSwapInfo}
      dispatch={dispatch}
      exactValue={exactValue ?? ''}
      flowName={t('Swap')}
      gasFallbackUsed={gasFallbackUsed}
      setStep={setStep}
      showTokenSelector={!!selectingCurrencyField}
      step={step}
      tokenSelector={
        <TokenSelector
...
