...
                my="none"
                px="spacing16"
                py="none"
                // on review screen, number formatter will already include $ sign
                showCurrencySign={false}
                showSoftInputOnFocus={false}
                testID="amount-input-in"
                textAlign="center"
                value={formattedAmountIn}
              />
              {inputCurrencyUSDValue && !isUSDInput ? (
                <Text color="textTertiary" variant={equivalentValueTextVariant}>
                  {formattedInputUsdValue}
...
